# gitflower

./: .containerignore  .gitignore  CLAUDE.md  CODING.md  Containerfile  DISTRIBUTION.md  Makefile  README.md  build.sh  config.yaml.example  go.mod  go.sum  main.go  pyproject.toml  run.sh  test-repos
app/: app.go  application.go  config.go  create.go  list.go  web.go
cfg/: config.go  config_test.go
cli/: cli.go  config.go  create.go  list.go  web.go
containertest/: smoke.sh
debian/: changelog  config.yaml  control  copyright  gitflower.1  gitflower.install  gitflower.manpages  gitflower.postinst  gitflower.postinst.debhelper  gitflower.postrm.debhelper  gitflower.prerm.debhelper  gitflower.service  rules
docs/: repository-management.md
git/: repository.go  repository_test.go  validation.go  validation_test.go
issues/: githooks-framework.md  in-tree-merge-requests.md  issues-view.md  pattern-convergence.md  review-approval.md  review-ui.md
pm/: branch-visualization.feature.md  cli-tools.feature.md  code-review-interface.feature.md  mcp-server.feature.md  multi-user-repo-management.feature.md  repository-management.feature.md  web-server-foundation.feature.md
repos/: config.go  repository.go  store.go  validation.go
test/: config.yaml  e2e_app_test.go  e2e_repos_test.go  e2e_repository_test.go  e2e_tree_test.go  e2e_web_interface_test.go  repos
tests/: conftest.py  test_browser_e2e.py  test_cli_issues.py  test_cli_mr.py  test_config.py  test_convergence.py  test_diffrows.py  test_gitread.py  test_graph.py  test_hooks_e2e.py  test_issues.py  test_mr.py  (+15 more)
(+73 files in other folders)
